Deals not transactions

--- a/app/views/deals/show.erb
+++ b/app/views/deals/show.erb
@@ -1,4 +1,4 @@
-<h1>Transaction</h1>
+<h1>Deal</h1>
 
 <p>Unconfirmed Balance: <%= @unconfirmed_balance %></p>
 <p>Confirmed Balance: <%= @confirmed_balance %></p>
