--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 
-<%= link_to "Transactions", transactions_path %>
+<%= link_to "Deals", deals_path %>
 <% else %>
  
 <%= link_to "Sign up", new_user_registration_path %>
