--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,2 +1,22 @@
-<p>Welcome to bestcrow, the premiere bitcoin escrow service.  Fees are
-a measly 0.025 BTC per 100 BTC.  That's under 50 cents.  Can't beat that.</p>
+<p>Welcome to mybitsafe, a bitcoin escrow service.  We provide an
+escrow service that holds bitcoins when trading. As a neutral
+third-party, we protect both buyers and sellers.</p>
+
+<p>For <b>BUYERS</b> spending bitcoins, this site ensures that you
+receive goods or servics before transferring bitcoins to a seller.  In
+the event you're ripped off or scammed, the scammer won't recieve any
+bitcoins.  Instead they will be donated to charity.  This charity
+option demonstrates that you have no reason not to pay the seller when
+services are delivered.</p>
+
+<p>For <b>SELLERS</b> trading goods or services for bitcoins, this
+site allows you to see that the buyer does indeed have enough bitcoins
+for your deal.  In addition, if the buyer refuses to release the
+coins, they go to charity.  It is impossible for the buyer to reverse
+or recover their coins.  This removes any incentive to accept goods or
+serivces and refuse to pay you your bitcoins.</p>
+
+<p>Best of all, mybitsafe only charges 0.025 for any deal up to 100
+BTC, with an additional 0.025 BTC for every hundred Bitcoins held for
+an individaul deal.  That's less than a dollar for the typical escrow
+deal!</p>
