--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bestcrow</title>
+  <title>mybitsafe</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-<h1>Bestcrow</h1>
+<h1>my.bit.safe</h1>
 <% if user_signed_in? %>
 <p>Howdy, <%= current_user.email %></p>
 <% else %>
-<p>Welcome to bestcrwo...</p>
+<p>Welcome to mybitsafe...</p>
 <% end %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
