--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -7,7 +7,7 @@
 <b>Escrow</b> address.  Funds will be held here until released</p>
 
 <p>Funds will be sent to <%= @deal.release_address %> when released.
-This is the <b>Release</b> address.</p> <p><b>Do not send funds
+This is the <b>Release</b> address.  <b>Do not send funds
 directly to this address or they will not be escrowed.</b></p>
 
 <p>When you are ready to release coins, click release button.</p>
