Basic work on layout.

--- a/app/views/deals/show.erb
+++ b/app/views/deals/show.erb
@@ -1,5 +1,2 @@
-<h1>Deal</h1>
-
-<p>Unconfirmed Balance: <%= @unconfirmed_balance %></p>
-<p>Confirmed Balance: <%= @confirmed_balance %></p>
-
+<p><b>Note:</b> <%= @deal.note ? @deal.note : "(no note)" %></p>
+<p><b>Release Address:</b> <%= @deal.release_address %></p>
