--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -1,17 +1,20 @@
-<h1>Deal</h1>
+<p><b>Note:</b> <%= @deal.note ? @deal.note : "(no note)" %></p>
+<p><b>Release Address:</b> <%= @deal.release_address %></p>
 
-<p>Unconfirmed Balance: <%= @unconfirmed_balance %></p>
-<p>Confirmed Balance: <%= @confirmed_balance %></p>
+<p><b>Available Balance:</b>
+<%= @confirmed_balance %>
+<i>(<%= @unconfirmed_balance %> pending)</i> </p>
 
-<p>Add coins by sending to <%= @deal.send_address %>.  This is the
-<b>Escrow</b> address.  Funds will be held here until released</p>
 
-<p>Funds will be sent to <%= @deal.release_address %> when released.
-This is the <b>Release</b> address.  <b>Do not send funds
-directly to this address or they will not be escrowed.</b></p>
+<p>Add coins by sending to the <b>Excrow</b> address:</p>
+
+<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p class='escrow_address'><%= @deal.send_address %>  </p></div>
 
 <p>When you are ready to release coins, click release button.</p>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<hr />
 <h2>Deal History</h2>
 
 <table>
