--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,5 @@ div.sidebar_menu {background-color:navy; color:yellow; margin:5%;padding:5% }
 div.sidebar_menu a { color:yellow; font-weight:bold; }
 
 p.escrow_address {font-weight:bold; background-color:#CCC;padding:0.25em;text-align:center;display:inline;margin-left:auto;margin-right:auto}
+
+p.notice, p.alert {background-color:#CCC;border-color:black;color:red;}
