--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -13,6 +13,7 @@
 <p>When you are ready to release coins, click release button.</p>
 
 <%= form_for @deal, :url => deal_release_path(@deal.uuid) do |deal_form| %>
+<%= text_field_tag :release_amount, @confirmed_balance %>
 <%= deal_form.submit "Release", :confirm => "Are you sure you want to release all coins?" %>
 <% end %>
 
