--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,13 @@
 <div class='sidebar_menu'>
 <% if user_signed_in? %>
 
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 
-<%= link_to "Deals", deals_path %>
+<%= link_to "My Deals", deals_path %>
 <% else %>
  
-<%= link_to "Sign up", new_user_registration_path %>
-<%= link_to "Sign in", new_user_session_path %>
+<%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Sign In", new_user_session_path %>
 <% end %>
 
 <a href='#'>About</a>
