--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -3,20 +3,19 @@ escrow service that holds bitcoins when trading. As a neutral
 third-party, we protect both buyers and sellers.</p>
 
 <p>For <b>BUYERS</b> spending bitcoins, this site ensures that you
-receive goods or servics before transferring bitcoins to a seller.  In
-the event you're ripped off or scammed, the scammer won't recieve any
-bitcoins.  Instead they will be donated to charity.  This charity
-option demonstrates that you have no reason not to pay the seller when
-services are delivered.</p>
+receive goods or services before transferring bitcoins to a seller.
+In the event you're ripped off or scammed, the scammer won't recieve
+any bitcoins.  Instead they will be donated to the bitcoin faucet.
+This prevents a seller from profiting without delivering.</p>
 
 <p>For <b>SELLERS</b> trading goods or services for bitcoins, this
 site allows you to see that the buyer does indeed have enough bitcoins
 for your deal.  In addition, if the buyer refuses to release the
-coins, they go to charity.  It is impossible for the buyer to reverse
-or recover their coins.  This removes any incentive to accept goods or
-serivces and refuse to pay you your bitcoins.</p>
+coins, they go to the bitcoin faucet.  It is impossible for the buyer
+to reverse or recover their coins.  This removes any incentive to
+accept goods or serivces and refuse to pay you your bitcoins.</p>
 
 <p>Best of all, mybitsafe only charges 0.025 for any deal up to 100
 BTC, with an additional 0.025 BTC for every hundred Bitcoins held for
-an individaul deal.  That's less than a dollar for the typical escrow
-deal!</p>
+an individaul deal.  That's less than the price of a postage stamp for
+the typical escrow deal!</p>
