I AXED YOU A QUESTION"

--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -6,7 +6,7 @@
 <i>(<%= @unconfirmed_balance %> pending)</i> </p>
 
 
-<p>Add coins by sending to the <b>Excrow</b> address:</p>
+<p>Add coins by sending to the <b>Escrow</b> address:</p>
 
 <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p class='escrow_address'><%= @deal.send_address %>  </p></div>
 
