--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
+<p><b> ALPHA!  USE WITH TESTNET ONLY</b></p>
+
 <%= yield %>
 </div>
 
