more layout junk

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 <div class='header'>
-<h1>my.bit.safe</h1>
+<h1><%= link_to "my.bit.safe", root_path %></h1>
 </div>
 <div class='sidebar'>
 
@@ -40,9 +40,9 @@
 <div class='footer'>
 <%= link_to "About", root_path %>
 |
-<%= link_to "Contact", "mailto:kgo+support@grant-olson.net" %>
+<%= link_to "Contact", "mailto:support@mybitsafe.net" %>
 |
-<%= link_to "Terms of Service", "#" %>
+<%= link_to "Terms of Service", terms_of_service_path %>
 </div>
 </body>
 </html>
