--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body { font-family: sans-serif; font-size:90%; padding:0%;margin:0%;border:0%}
 
 h1, h2, h3, h4, h5, h6 {font-family: monospace;}
 h1 { background-color:DodgerBlue; color:white; padding-left:2.5%;padding-right:2.5%;padding-top:0.5%;padding-bottom:0.5%; font-style:italic; margin-top:0%}
+h1 a { color:white; }
 
 div.sidebar { width:10%; float:left; font-size:90%;}
 div.body {float:right;width:85%;border:2.5%;margin:2.5%;margin-top:0%}
