--- a/app/views/deals/index.erb
+++ b/app/views/deals/index.erb
@@ -19,8 +19,13 @@ is created, you will be able to deposit funds.</p>
 <h1>Existing Deals</h1>
 <p>Click on an existing deal to view, add funds, or release coins.</p>
 
+<table>
+<tr><th>Note</th><th>Balance</th><th>Expire Date</th><th>Release Address</th></tr>
 <% @deals.each do |deal| %>
-<p>
-  <%= link_to "#{ deal.note ? deal.note : '(no note)'} -  #{deal.release_address}", deal_path(deal.uuid) %>
-</p>
+   <tr>
+   <td> <%= link_to "#{ deal.note ? deal.note : '(no note)'}", deal_path(deal.uuid)%> </td>
+   <td> <%= "%.2f" % deal.line_item_balance %> </td>
+   <td> <%= deal.expires_on.strftime("%d-%b-%Y") %></td>
+   <td> <%=deal.release_address %></td>
 <% end %>
+</table>
