--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,13 @@
 <div class='sidebar_menu'>
 <% if user_signed_in? %>
 
-<%= link_to "My Deals", deals_path %>
-<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+<div><%= link_to "My Deals", deals_path %></div>
+<div><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></div>
 
 <% else %>
  
-<%= link_to "Sign Up", new_user_registration_path %>
-<%= link_to "Sign In", new_user_session_path %>
+<div><%= link_to "Sign Up", new_user_registration_path %></div>
+<div><%= link_to "Sign In", new_user_session_path %></div>
 <% end %>
 </div>
 </div>
