--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
 </div>
 
 <div class='footer'>
+<%= link_to "Fee Schedule", fees_path %>
+|
 <%= link_to "About", root_path %>
 |
 <%= link_to "Contact", "mailto:support@mybitsafe.net" %>
