--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,3 +19,6 @@ p.notice, p.alert {background-color:#CCC;border-color:black;color:red;font-weigh
 
 a {color:DodgerBlue;font-weight:bold;}
 a:hover {color:red;}
+
+table.fees {border:1pt solid black;}
+table.fees th, table.fees td { border:1pt solid grey; padding-left:0.5em;padding-right:0.5em;}
