--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -5,8 +5,9 @@ third-party, we protect both buyers and sellers.</p>
 <p>For <b>BUYERS</b> spending bitcoins, this site ensures that you
 receive goods or services before transferring bitcoins to a seller.
 In the event you're ripped off or scammed, the scammer won't recieve
-any bitcoins.  Instead they will be donated to the bitcoin faucet.
-This prevents a seller from profiting without delivering.</p>
+any bitcoins.  Instead they will be donated to the <a
+href='https://freebitcoins.appspot.com/'>Bitcoin Faucet</a>.  This
+prevents a seller from profiting without delivering.</p>
 
 <p>For <b>SELLERS</b> trading goods or services for bitcoins, this
 site allows you to see that the buyer does indeed have enough bitcoins
@@ -14,6 +15,10 @@ for your deal.  In addition, if the buyer refuses to release the
 coins, they go to the bitcoin faucet.  It is impossible for the buyer
 to reverse or recover their coins.  This removes any incentive to
 accept goods or serivces and refuse to pay you your bitcoins.</p>
+
+<p>If funds are not released after 30 days, the deal will expire and
+coins will automatically be donated to the <a
+href='https://freebitcoins.appspot.com/'>Bitcoin Faucet</a>.</p>
 
 <p>Best of all, mybitsafe only charges 0.025 for any deal up to 100
 BTC, with an additional 0.025 BTC for every hundred Bitcoins held for
