--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -32,6 +32,10 @@
 
 <% end %>
 
+<p>You can use <%= link_to "this link", deal_path(@deal.uuid) %> to
+show your counterparty that funds have been deposited.  The
+counterparty will not see any private information about the deal. </p>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
   
