Another bitcoin faucet link

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -12,9 +12,11 @@ prevents a seller from profiting without delivering.</p>
 <p>For <b>SELLERS</b> trading goods or services for bitcoins, this
 site allows you to see that the buyer does indeed have enough bitcoins
 for your deal.  In addition, if the buyer refuses to release the
-coins, they go to the bitcoin faucet.  It is impossible for the buyer
-to reverse or recover their coins.  This removes any incentive to
-accept goods or serivces and refuse to pay you your bitcoins.</p>
+coins, they go to the <a
+href='https://freebitcoins.appspot.com/'>Bitcoin Faucet</a>.  It is
+impossible for the buyer to reverse or recover their coins.  This
+removes any incentive to accept goods or serivces and refuse to pay
+you your bitcoins.</p>
 
 <p>If funds are not released after 30 days, the deal will expire and
 coins will automatically be donated to the <a
