--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<p><b> BETA! USE AT YOUR OWN RISK!</b></p>
+<p><b> BETA.</b></p>
 
 <%= yield %>
 </div>
