GOOD email address

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 |
 <%= link_to "About", root_path %>
 |
-<%= link_to "Contact", "mailto:support@mybitsafe.net" %>
+<%= link_to "Contact", "mailto:support@mybitsafe.com" %>
 |
 <%= link_to "Terms of Service", terms_of_service_path %>
 </div>
