--- a/app/views/home/fees.erb
+++ b/app/views/home/fees.erb
@@ -1,8 +1,8 @@
 <h1>Fee schedule</h1>
 
-<p>We charge a fee of 0.025 BTC per hundred BTCs held in escrow.  This
-fee is flat per hundred BTC increment.  This means that most deals
-should cost 0.025 BTC, less than the price of a postage stamp.</p>
+<p>We charge a tiered fee of 0.025 BTC per hundred BTCs held in
+escrow.  This means that most deals should cost 0.025 BTC, less than
+the price of a postage stamp.</p>
 
 <p>Please make sure to include this fee when sending funds to the
 escrow address.  For examle, if you're buying something that costs 5
