--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,8 @@
 <div class='footer'>
 <%= link_to "Fee Schedule", fees_path %>
 |
+<%= link_to "FAQ", faq_path %>
+|
 <%= link_to "About", root_path %>
 |
 <%= link_to "Contact", "mailto:support@mybitsafe.com" %>
