--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ h1 a { color:white;text-decoration:none; }
 h1 a:hover { color:yellow; }
 
 div.sidebar { width:10%; float:left; font-size:90%;}
-div.body {float:right;width:85%;border:2.5%;margin:2.5%;margin-top:0%}
+div.body {float:right;width:70%;border:2.5%;margin:2.5%;margin-top:0%;margin-right:15%}
 div.footer { clear:both;text-align:center; }
 
 div.sidebar_menu {background-color:DodgerBlue; color:white; margin:5%;padding:5% }
