Minor style stuff

--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -1,7 +1,7 @@
 <h2>Frequently Asked Questions</h2>
 
 <h3>What's with this bitcoin faucet crap?  Why can't I get my money
-back if the seller rips me off.</h3>
+back if the seller rips me off?</h3>
 
 <p>Because this puts you an a position of leverage.  You could
 conceivably rip off the seller after he's fulfilled all his
