--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,8 @@ h1 { background-color:DodgerBlue; color:white; padding-left:2.5%;padding-right:2
 h1 a { color:white;text-decoration:none; }
 h1 a:hover { color:yellow; }
 
+h3 {font-size:130%;}
+
 div.sidebar { width:10%; float:left; font-size:90%;}
 div.body {float:right;width:70%;border:2.5%;margin:2.5%;margin-top:0%;margin-right:15%}
 div.footer { clear:both;text-align:center; }
