--- a/app/views/deals/show_owner.erb
+++ b/app/views/deals/show_owner.erb
@@ -6,22 +6,7 @@
 
 <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p class='escrow_address'><%= @deal.send_address %>  </p></div>
 
-<p>Please remember to include
-
-<a href="#" class="fee_link">
-our fee<div class='fees' />
-<table class=fees>
-<tr><th>Amount</th><th>Fee</th></tr>
-<tr><td>0.01 - 100 BTC</td><td>0.025 BTC</td></tr>
-<tr><td>100.01 - 200 BTC</td><td>0.050 BTC</td></tr>
-<tr><td>200.01 - 300 BTC</td><td>0.075 BTC</td></tr>
-<tr><td>300.01 - 400 BTC</td><td>0.100 BTC</td></tr>
-<tr><td>400.01 - 500 BTC</td><td>0.125 BTC</td></tr>
-<tr><td>500.01 - 600 BTC</td><td>0.150 BTC</td></tr>
-<tr><td colspan=2>Etc...</td></tr>
-</table></div></a>
-
- when sending coins.</p>
+<p>Please remember to include <%= link_to "our fee", fees_path %>  when sending coins.</p>
 
 <% if !@deal.expired? %>
   <p>When you are ready to release coins, click release button.</p>
