--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -24,5 +24,5 @@ href='https://freebitcoins.appspot.com/'>Bitcoin Faucet</a>.</p>
 
 <p>Best of all, mybitsafe only charges 0.025 for any deal up to 100
 BTC, with an additional 0.025 BTC for every hundred Bitcoins held for
-an individaul deal.  That's less than the price of a postage stamp for
+an individual deal.  That's less than the price of a postage stamp for
 the typical escrow deal!</p>
