--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -1,5 +1,12 @@
 <h2>Frequently Asked Questions</h2>
 
+<h3>How long does it take for my bitcoins to show up as confirmed?</h3>
+
+<p>We wait for three confirmations (that is, three bitcoin blocks)
+before confirming funds.  Since each block takes 10 minutes on
+average, it should take approximately 30 minues for funds to show as
+confirmed.</p>
+
 <h3>What's with this bitcoin faucet crap?  Why can't I get my money
 back if the seller rips me off?</h3>
 
