--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -85,3 +85,28 @@ your account or a pending deal.</p>
 
 <p>There are a variety of sites that offer disposable emails if you
 are concerned about anonymity.</p>
+
+<h3>Who are you?  Why should I trust you?</h3>
+
+<p>Within the bitcoin community, I go by the handle 'kgo'.  I'm active
+on the forums and on the bitcoin-otc irc channel.  I have conducted
+numerous deals in both places.  I have a good <a
+href='http://bitcoin-otc.com/viewratingdetail.php?nick=kgo&sign=ANY&type=RECV'>
+OTC WoT rating</a>.</p>
+
+<p>In real life, my name is <a href="http://www.grant-olson.net">Grant
+Olson</a>, and I'm a software engineer who works at the
+Pittsburgh-based startup <a href="http://pikimal.com">Pikimal</a>.</p>
+
+<p>The website itself is hosted on Amazon EC2.  Regular backups of
+both the database and bitcoin wallet are send off-site in encrypted
+format.  In the event of a total server failure, a customized AMI can
+be used to bring up a replacement server in a matter of minutes.</p>
+
+<p>I realize trust is something that is not given out, but earned.
+I'll strive to continue to operate in an ethical manner, and host a
+reliable service, until I can earn your trust.</p>
+
+<p>Thanks,</p>
+
+<p>- <i>Grant T. Olson</i></p>
